Minor tweaks to tests for code conformity.